--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT OR Apache-2.0"
 keywords = ["async", "client", "misskey"]
 
 [features]
-default = ["aid"]
+default = ["aidx"]
 
 13-14-0 = ["misskey-api/13-14-0", "13-13-2"]
 13-13-2 = ["misskey-api/13-13-2", "13-13-0"]
@@ -95,6 +95,7 @@ default = ["aid"]
 12-8-0 = ["misskey-api/12-8-0", "12-5-0"]
 12-5-0 = ["misskey-api/12-5-0"]
 
+aidx = ["misskey-api/aidx"]
 aid = ["misskey-api/aid"]
 meid = ["misskey-api/meid"]
 ulid = ["misskey-api/ulid"]
